--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,13 @@ nav {
       nav ul li a {
         text-decoration: none; }
 
+.slide {
+  display: grid;
+  top: 20px; }
+
+.imagenes p {
+  text-align: center; }
+
 main p {
   background-color: #CBBCF6;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -48,11 +55,6 @@ footer {
   right: 0%;
   text-align: center;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; }
-
-.imagenes {
-  top: 10%;
-  padding: 1.5rem;
-  display: grid; }
 
 .publi {
   padding: 1.5rem;
@@ -86,11 +88,6 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center; }
-
-@media screen and (min-width: 600px) {
-  .imagenes {
-    display: block;
-    grid-area: pSec; } }
 
 @media screen and (min-width: 700px) {
   .publi {
